--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
         this.echo ('[[;#e3eaa7;black]Keywords            Description]')
         this.echo('[[;#e3eaa7;black]------------------------------------------------------]');
         this.echo('[[;#e3eaa7;black] about					 More about MySelf]');
-		this.echo('[[;#e3eaa7;black] skills					   What skills I possess]');
-		this.echo('[[;#e3eaa7;black] education			    What degrees I got]');
+		this.echo('[[;#e3eaa7;black] skills					   Go through my skills]');
+		this.echo('[[;#e3eaa7;black] education			    Educational background]');
         this.echo('[[;#e3eaa7;black] work					   Where do I Work]');
         this.echo('[[;#e3eaa7;black] currentproject		  What project I am working currently]');
-        this.echo('[[;#e3eaa7;black] projects				  What projects I have done so far]');
-        this.echo('[[;#e3eaa7;black] contact				 How to reach me]');        
-        //this.echo('[[;#e3eaa7;black] job					      Where I am searching for  opportunity]');
+        this.echo('[[;#e3eaa7;black] projects				  What projects I have done in past]');
+        this.echo('[[;#e3eaa7;black] contact				 Connect me on]');        
         this.echo('[[;#e3eaa7;black] thanks					Thank You]');     
         this.echo('[[;#e3eaa7;black] clear					   Clear the terminal]');
     },   
