--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Kapratwar Abhishek</title>
 <link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css"/>
+
+<link href='https://fonts.googleapis.com/css?family=Ubuntu Mono' rel='stylesheet'>
+
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js"></script>
 
@@ -20,6 +23,12 @@
     ul#menu li {
   display:inline;
 }
+
+
+div {
+    font-family: 'Ubuntu Mono';
+}
+
 
 </style>
 
@@ -99,11 +108,11 @@
     </script>
     <div id = 'first' style = 'display: none; color:white;font-size : 40px;'>Abhishek Kapratwar</div>></div>
     <div id = 'about1' style = 'display: none; color:white;font-size : 40px;'> 
-        <p>Hi folks, this is Abhishek, a young energetic result oriented professional offering <b>1.5 years</b> of experience, currently associated with <b>Virtusa Consulting Services. Pvt. Ltd, Pune</b> as a <b>Software Developer</b>. Extended expertise in <b>Java, Spring MVC, Hibernate, HTML, MySQL</b> and <b>Penetration Testing</b>.</p> 
+        <p>Hi folks, this is <b>Abhishek</b>, a young energetic result oriented professional offering <b>1.5 years</b> of experience, currently associated with <b>Virtusa Consulting Services. Pvt. Ltd, Pune</b> as a <b>Software Developer</b>. Extended expertise in <b>Java, Spring MVC, Hibernate, HTML, MySQL</b> and <b>Penetration Testing</b>.</p> 
         
     </div>
 	
-	<div id = 'Skills' style = 'display: none; color:white;font-size : 40px;'>
+	<div id = 'Skills' style = 'font-family: Ubuntu Mono, monospace; display: none; color:white;font-size : 40px;'>
         <ul>
             <li style =  "color:orchid;font-size:18px;" ><b>Operating Systems:</b><span style="color:gainsboro"> Linux, Windows</span></li>
             <li style =  "color:orchid;font-size:18px;" ><b>Programming Languages:</b><span style="color:gainsboro"> Java, C, C++</span></li>
